@@ -82,20 +82,20 @@ public class WD_FxICC extends BaseTradeT1 implements TradeExecutionStrategy {
 		MyLog myLog = logPool.get();
 		REQ_20001 req = (REQ_20001) dto;
 		
-		String sbnkNo = req.getSbnkNo();//发起行行号
-		if(sbnkNo.substring(0, 3).equals("313")){
-			myLog.info(logger, "交易发起行为本行，启用挡板数据");
-			REP_20001 rep = new REP_20001();		
-			String sDate = new SimpleDateFormat("yyyyMMddHHmmss").format(new Date());
-			rep.setSysDate(Integer.valueOf(sDate.substring(0, 8)));
-			rep.setSysTime(Integer.valueOf(sDate.substring(8))); 
-			rep.setOtxnAmt(req.getTxnAmt());		
-			//JHF1-异地手续费JHF2-代理手续费
-			Double fee = new Double(5d);
-			rep.setFee(fee);
-			rep.setActBal(10000d);
-			return rep;
-		}
+//		String sbnkNo = req.getSbnkNo();//发起行行号
+//		if(sbnkNo.substring(0, 3).equals("313")){
+//			myLog.info(logger, "交易发起行为本行，启用挡板数据");
+//			REP_20001 rep = new REP_20001();		
+//			String sDate = new SimpleDateFormat("yyyyMMddHHmmss").format(new Date());
+//			rep.setSysDate(Integer.valueOf(sDate.substring(0, 8)));
+//			rep.setSysTime(Integer.valueOf(sDate.substring(8))); 
+//			rep.setOtxnAmt(req.getTxnAmt());		
+//			//JHF1-异地手续费JHF2-代理手续费
+//			Double fee = new Double(5d);
+//			rep.setFee(fee);
+//			rep.setActBal(10000d);
+//			return rep;
+//		}
 		
 		//风险检查
 		//风险监控检查调用
@@ -123,6 +123,9 @@ public class WD_FxICC extends BaseTradeT1 implements TradeExecutionStrategy {
 	}
 	public ESB_REP_30033000202 validateIC(DataTransObject dto) throws SysTradeExecuteException {
 		REQ_20001 reqDto = (REQ_20001) dto;
+		if(reqDto.getICData()==null||reqDto.getICData().equals("")){
+			return null;
+		}
 		MyLog myLog = logPool.get();
 		// 交易机构
 		String txBrno = null;
